log
Thu, Mar 27, 2025  5:21:30 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:24:56 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4615ac0
Thu, Mar 27, 2025  5:35:08 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
23838ad
Thu, Mar 27, 2025  5:35:55 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7182a79
Thu, Mar 27, 2025  5:37:18 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
82340e8
Thu, Mar 27, 2025  5:38:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58297cd
